[package]
edition = "2021"
name = "sanity_rs_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
reqwest = {version = "^0.11.10", features = ["multipart", "default", "blocking"]}
serde_json = "1.0"
tokio = {version = "^1.18.2", features = ["full"]}
urlencoding = "2.1.0"
serde = {version= "1.0.137", features= ["derive"]}