[package]
edition = "2021"
name = "sanity_rs_client"
version = "0.1.0"
authors = ["manishsingh10895 <manishsingh10895@gmail.com>"]
description = "Simple rust client for sanity.io"
readme = "README.md"
repository = "https://github.com/manishsingh10895/sanity_rs_client"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
reqwest = {version = "^0.11.10", features = ["multipart", "default", "blocking"]}
serde_json = "1.0"
tokio = {version = "^1.18.2", features = ["full"]}
urlencoding = "2.1.0"
serde = {version= "1.0.137", features= ["derive"]}